# task-planner

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  task-planner-assistant.skill  vite.config.js
.github/workflows/: release.yml
scripts/: agent-worklog.mjs  generate-icons.mjs  install-hooks.mjs
scripts/__tests__/: agent-worklog.test.js
scripts/hooks/: pre-push
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_watcher.rs  main.rs
src/agent/: AgentSync.js  apply.js  digestService.js  importService.js  inboxService.js  proseIngestHandler.js  trustMatrix.js  validate.js
src/auth/: errors.js  google.js  microsoft.js  pkce.js  tokenStore.js
src/components/: AgendaView.jsx  AgentDigest.jsx  AgentImport.jsx  AgentInbox.jsx  AppearanceSettings.jsx  CalendarView.jsx  ConnectStorage.jsx  ContextMenu.jsx  CsvImportDialog.jsx  GanttChart.jsx  IngestModal.jsx  ProjectDashboard.jsx  ShortcutHelp.jsx  Sidebar.jsx  SpreadsheetView.jsx  SprintVelocity.jsx  SyncStatus.jsx  TaskModal.jsx  TauriSettings.jsx  Toast.jsx
src/data/: sampleData.js
src/hooks/: useAgentInbox.js  useCustomCss.js  useGanttGestures.js  useHydration.js  useKeyboardShortcuts.js  useSync.js
src/ingest/: costEstimate.js  proseIngest.js
src/obsidian/: errors.js  index.js  llmClient.js  llmPrompts.js  parseDeterministic.js  parseLLM.js  parseProse.js  (+4 more)
tests/: app.spec.js
(+52 files in other folders)
